# bitcoinpq

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  INSTALL.md  Makefile.am  README.md  configure.ac  libbpqconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bpq_find_bdb48.m4  bpq_qt.m4  bpq_subdir_to_include.m4
cmake/: BoostTestHelpers.cmake  FindBerkeleyDB.cmake  FindBotan.cmake  FindSodium.cmake  README.txt  berkeley-db4.patch.osx  bpq-qt.cmake  bpq-tests.cmake  bpq.conf  bpqd.conf  init.d.bpqd.sh
contrib/: README.md  bpq-cli.bash-completion  bpq-tx.bash-completion  bpq.conf  bpqd.bash-completion  gitian-build.sh  install_db4.sh  tidy_datadir.sh  valgrind.supp
contrib/debian/: README.md  bpq-qt.desktop  bpq-qt.install  bpq-tx.manpages  bpqd.bash-completion  bpqd.examples  bpqd.install  bpqd.lintian-overrides  bpqd.manpages  control  rules
contrib/devtools/: gen-manpages.sh
contrib/init/: README.md  bpqd.conf  bpqd.init  bpqd.openrc  bpqd.openrcconf  bpqd.service  org.bpq.bpqd.plist
contrib/linearize/: README.md  bitcoin.conf  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: README.md  bpq.fc  bpq.if  bpq.spec
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt
contrib/verifybinaries/: verify.sh
contrib/zmq/: zmq_sub.py  zmq_sub3.4.py
doc/: Doxyfile.in  README.md  REST-interface.md  build-openbsd.md  build-osx.md  build-unix.md  developer-notes.md  files.md  init.md  tor.md  zmq.md
doc/man/: Makefile.am  bpq-cli.1  bpq-qt.1  bpq-tx.1  bpqd.1
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.12.0.md  release-notes-0.15.0.md
share/: setup.nsi.in
share/qt/: Info.plist.in
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.bench.include  Makefile.bpqcrypto.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypt_ecdsa.cpp  crypt_xmss.cpp  crypt_xmss.h  dbwrapper.cpp  hash.h  httprpc.cpp  (+37 more)
src/bench/: .gitignore  ccoins_caching.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/config/: bpq-config.h.in
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  equihash.cpp  equihash.h
src/policy/: feerate.cpp  fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h
src/qt/: Makefile  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  firsttransactionpage.cpp  firsttransactionpage.h  guiconstants.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  peertablemodel.h  receivecoinsdialog.cpp  receiverequestdialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  utilitydialog.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  (+4 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  firsttransactionpage.ui  overviewpage.ui  sendcoinsdialog.ui
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  test_main.cpp
src/rpc/: blockchain.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  server.cpp  util.cpp
src/script/: bpqconsensus.cpp  bpqconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: lockedpool.cpp
src/support/allocators/: secure.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  amount_tests.cpp  base58_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bpq_tests.cpp  coins_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  equihash_tests.cpp  key_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pow_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_standard_tests.cpp  script_tests.cpp  sigopcount_tests.cpp  test_bitcoin.cpp  test_bitcoin.h  test_bitcoin_fuzzy.cpp  test_bitcoin_main.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  versionbits_tests.cpp
src/test/data/: base58_keys_valid.json  script_tests.json  tx_invalid.json
src/wallet/: crypter.cpp  crypter.h  feebumper.cpp  feebumper.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqconfig.h
test/: README.md  config.ini.in
test/functional/: README.md  bpq_basic.py  bpq_usecount.py  feature_bip68_sequence.py  feature_block.py  feature_config_args.py  feature_dbcrash.py  feature_dersig.py  feature_notifications.py  feature_proxy.py  feature_pruning.py  feature_rbf.py  feature_reindex.py  feature_versionbits_warning.py  interface_bitcoin_cli.py  interface_http.py  interface_zmq.py  mempool_persist.py  p2p_compactblocks.py  p2p_invalid_block.py  p2p_leak.py  p2p_segwit.py  p2p_timeouts.py  p2p_unrequested_blocks.py  rpc_bind.py  rpc_deprecated.py  rpc_fundrawtransaction.py  rpc_listtransactions.py  rpc_rawtransaction.py  rpc_users.py  test_runner.py  wallet_abandonconflict.py  wallet_accounts.py  (+12 more)
(+11 files in other folders)
